resume spacing fix

--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -63,7 +63,7 @@ h3 {
 #resume {
   width: 85px;
   height: 85px;
-  margin-bottom: -4px;
+  margin-bottom: 0px;
 }
 
 .social {
